crates/cyrs-syntax/tests/snapshots/syntax_snapshots__pattern_shortest_path_named.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
assertion_line: 344
expression: "format_with_errors(\"MATCH p = shortestPath((a)-[:KNOWS*]->(b)) RETURN p\")"
---
SOURCE_FILE@0..51
  STATEMENT@0..51
    MATCH_CLAUSE@0..42
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..42
        NAMED_PATTERN_PART@5..42
          NAME@5..7
            WHITESPACE@5..6 " "
            IDENT@6..7 "p"
          WHITESPACE@7..8 " "
          EQ@8..9 "="
          SHORTEST_PATH_PATTERN@9..42
            WHITESPACE@9..10 " "
            SHORTESTPATH_KW@10..22 "shortestPath"
            L_PAREN@22..23 "("
            PATTERN_PART@23..41
              NODE_PATTERN@23..26
                L_PAREN@23..24 "("
                NAME@24..25
                  IDENT@24..25 "a"
                R_PAREN@25..26 ")"
              REL_PATTERN@26..38
                MINUS@26..27 "-"
                REL_DETAIL@27..36
                  L_BRACK@27..28 "["
                  REL_TYPE_EXPR@28..34
                    COLON@28..29 ":"
                    IDENT@29..34 "KNOWS"
                  REL_LENGTH@34..35
                    STAR@34..35 "*"
                  R_BRACK@35..36 "]"
                ARROW_R@36..38 "->"
              NODE_PATTERN@38..41
                L_PAREN@38..39 "("
                NAME@39..40
                  IDENT@39..40 "b"
                R_PAREN@40..41 ")"
            R_PAREN@41..42 ")"
    RETURN_CLAUSE@42..51
      WHITESPACE@42..43 " "
      RETURN_KW@43..49 "RETURN"
      RETURN_BODY@49..51
        RETURN_ITEMS@49..51
          RETURN_ITEM@49..51
            VAR_EXPR@49..51
              WHITESPACE@49..50 " "
              IDENT@50..51 "p"
