crates/cyrs-syntax/tests/snapshots/syntax_snapshots__pattern_var_length_range.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"MATCH (a)-[:KNOWS*1..3]->(b) RETURN a, b\")"
---
SOURCE_FILE@0..40
  STATEMENT@0..40
    MATCH_CLAUSE@0..28
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..28
        PATTERN_PART@5..28
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "a"
            R_PAREN@8..9 ")"
          REL_PATTERN@9..25
            MINUS@9..10 "-"
            REL_DETAIL@10..23
              L_BRACK@10..11 "["
              REL_TYPE_EXPR@11..17
                COLON@11..12 ":"
                IDENT@12..17 "KNOWS"
              REL_LENGTH@17..22
                STAR@17..18 "*"
                INT_LITERAL@18..19 "1"
                DOT_DOT@19..21 ".."
                INT_LITERAL@21..22 "3"
              R_BRACK@22..23 "]"
            ARROW_R@23..25 "->"
          NODE_PATTERN@25..28
            L_PAREN@25..26 "("
            NAME@26..27
              IDENT@26..27 "b"
            R_PAREN@27..28 ")"
    RETURN_CLAUSE@28..40
      WHITESPACE@28..29 " "
      RETURN_KW@29..35 "RETURN"
      RETURN_BODY@35..40
        RETURN_ITEMS@35..40
          RETURN_ITEM@35..37
            VAR_EXPR@35..37
              WHITESPACE@35..36 " "
              IDENT@36..37 "a"
          COMMA@37..38 ","
          RETURN_ITEM@38..40
            VAR_EXPR@38..40
              WHITESPACE@38..39 " "
              IDENT@39..40 "b"
