crates/cyrs-syntax/tests/snapshots/syntax_snapshots__pattern_var_length_unbounded.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"MATCH (a)-[r:KNOWS*]->(b) RETURN a\")"
---
SOURCE_FILE@0..34
  STATEMENT@0..34
    MATCH_CLAUSE@0..25
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..25
        PATTERN_PART@5..25
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "a"
            R_PAREN@8..9 ")"
          REL_PATTERN@9..22
            MINUS@9..10 "-"
            REL_DETAIL@10..20
              L_BRACK@10..11 "["
              NAME@11..12
                IDENT@11..12 "r"
              REL_TYPE_EXPR@12..18
                COLON@12..13 ":"
                IDENT@13..18 "KNOWS"
              REL_LENGTH@18..19
                STAR@18..19 "*"
              R_BRACK@19..20 "]"
            ARROW_R@20..22 "->"
          NODE_PATTERN@22..25
            L_PAREN@22..23 "("
            NAME@23..24
              IDENT@23..24 "b"
            R_PAREN@24..25 ")"
    RETURN_CLAUSE@25..34
      WHITESPACE@25..26 " "
      RETURN_KW@26..32 "RETURN"
      RETURN_BODY@32..34
        RETURN_ITEMS@32..34
          RETURN_ITEM@32..34
            VAR_EXPR@32..34
              WHITESPACE@32..33 " "
              IDENT@33..34 "a"
